--- a/index.html
+++ b/index.html
@@ -73,18 +73,35 @@
       }, function() {
         VKInitialization();
       }, '5.131');
+      VKMobileInitialization();
     }
 
     function VKMobileInitialization()
     {
+      let userLang = navigator.language || navigator.userLanguage;
+      unityInstance.SendMessage('PlayerManager', 'GetPlayerLanguage', userLang);
+
       vkBridge.send('VKWebAppInit').then(res => {
-        console.log(res);
-        vkBridge.send("VKWebAppGetUserInfo").then(res => {
-          console.log(res);
-        });
-        vkBridge.send("VKWebAppAddToHomeScreenInfo").then(res => {
-          console.log(res);
-        });
+        if (res.result === true)
+        {
+          vkBridge.send("VKWebAppGetUserInfo").then(res => {
+            let userName = res.first_name + " " + res.last_name;
+            unityInstance.SendMessage('PlayerManager', 'GetPlayerName', userName);
+            unityInstance.SendMessage('PlayerManager', 'GetPlayerPhoto', res.photo_200);
+            unityInstance.SendMessage('PlayerManager', 'PlayerAuthorized');
+          });
+          vkBridge.send("VKWebAppAddToHomeScreenInfo").then(res => {
+            if (res.is_feature_supported === false) {
+              unityInstance.SendMessage('VKMechanicsController', 'Added');
+            } else {
+              if (res.is_added_to_home_screen === true) {
+                unityInstance.SendMessage('VKMechanicsController', 'Added');
+              }
+            }
+          })
+        } else {
+          unityInstance.SendMessage('PlayerManager', 'PlayerNotAuthorized');
+        }
       })
     }
 
@@ -131,8 +148,10 @@
         "attachments": link
       }).catch(err => {
         console.log(err);
-        VK.api("wall.post", {"message": text, "attachments" : link, "v":"5.73"}, function (data) {
-        })
+        if (err.error_type !== "client_error") {
+          VK.api("wall.post", {"message": text, "attachments" : link, "v":"5.73"}, function (data) {
+          })
+        }
       })
     }
 
