--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     </script>
 
     <script type = "text/javascript" language = "javascript">
-    var fullscreenID = 'ID';
-    var mobilefullscreenID = 'ID';
-    var horizontalbannerID = 'ID';
-    var mobilebannerID = 'ID';
-    var rewardvideoID = 'ID';
+    var fullscreenID = 'R-A-1324864-1';
+    var mobilefullscreenID = 'R-A-1324864-4';
+    var horizontalbannerID = 'R-A-1324864-2';
+    var mobilebannerID = 'R-A-1324864-5';
+    var rewardvideoID = 'R-A-1324864-3';
 
     var text;
     var link;
@@ -38,19 +38,19 @@
     <div id="unityContainer" style="position:relative; width: 100vw; height: 100vh"></div>
 
       <!-- Full Screen -->
-    <div id="yandex_rtb_ID" style="position: absolute; top: 16%; width: 100vw; height: 67vh; background: #CD5C5C"></div>
+    <div id="yandex_rtb_R-A-1324864-1" style="position: absolute; top: 16%; width: 100vw; height: 67vh; background: #CD5C5C"></div>
 
     <!-- Mobile Full Screen -->
-    <div id="yandex_rtb_ID" style="position: absolute; top: 16%; width: 100vw; height: 67vh; background: #ADFF2F"></div>
+    <div id="yandex_rtb_R-A-1324864-4" style="position: absolute; top: 16%; width: 100vw; height: 67vh; background: #ADFF2F"></div>
 
     <!-- Horizontal Banner -->
-    <div id="yandex_rtb_ID" style="position: absolute; bottom: 0;  width: 100vw; height: 10vh; background: #FF69B4"></div>
+    <div id="yandex_rtb_R-A-1324864-2" style="position: absolute; bottom: 0;  width: 100vw; height: 10vh; background: #FF69B4"></div>
 
     <!-- Mobile Banner -->
-    <div id="yandex_rtb_ID" style="position: absolute;  bottom: 0; width: 100vw; height: 10vh; background: #FF6347"></div>
+    <div id="yandex_rtb_R-A-1324864-5" style="position: absolute;  bottom: 0; width: 100vw; height: 10vh; background: #FF6347"></div>
 
     <!-- Reward Video -->
-    <div id="yandex_rtb_ID" style="position: absolute; top: 16%; width: 100vw; height: 67vh; background: #FFFF00"></div>
+    <div id="yandex_rtb_R-A-1324864-3" style="position: absolute; top: 16%; width: 100vw; height: 67vh; background: #FFFF00"></div>
 
     </div>
 
