--- a/index.html
+++ b/index.html
@@ -11,15 +11,377 @@
     <script>
       var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build82.json", {onProgress: UnityProgress});
     </script>
+
+    <script type = "text/javascript" language = "javascript">
+    var fullscreenID = 'R-A-1324864-1';
+    var mobilefullscreenID = 'R-A-1324864-4';
+    var horizontalbannerID = 'R-A-1324864-2';
+    var mobilebannerID = 'R-A-1324864-5';
+    var rewardvideoID = 'R-A-1324864-3';
+
+    var text;
+    var link;
+    var currentUserId;
+    </script>
+
+    <!-- Yandex.RTB -->
+    <script>window.yaContextCb=window.yaContextCb||[]</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <!-- VK.API -->
+    <script src="https://vk.com/js/api/xd_connection.js?2"  type="text/javascript"></script>
+    <!-- VK.bridge -->
+    <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
+    <!-- OK -->
+    <script type="text/javascript" src="//api.ok.ru/js/fapi5.js" defer="defer"></script>
+
   </head>
   <body>
     <div class="webgl-content">
-      <div id="unityContainer" style="width: 960px; height: 600px"></div>
-      <div class="footer">
-        <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">AdvertisingTest</div>
-      </div>
+
+    <div id="unityContainer" style="position:relative; width: 100vw; height: 100vh"></div>
+
+      <!-- Full Screen -->
+    <div id="yandex_rtb_R-A-1324864-1" style="position: absolute; top: 16%; width: 100vw; height: 67vh"></div>
+
+    <!-- Mobile Full Screen -->
+    <div id="yandex_rtb_R-A-1324864-4" style="position: absolute; top: 16%; width: 100vw; height: 67vh"></div>
+
+    <!-- Horizontal Banner -->
+    <div id="yandex_rtb_R-A-1324864-2" style="position: absolute; bottom: 0;  width: 100vw; height: 10vh"></div>
+
+    <!-- Mobile Banner -->
+    <div id="yandex_rtb_R-A-1324864-5" style="position: absolute;  bottom: 0; width: 100vw; height: 10vh"></div>
+
+    <!-- Reward Video -->
+    <div id="yandex_rtb_R-A-1324864-3" style="position: absolute; top: 16%; width: 100vw; height: 67vh"></div>
+
     </div>
+
+    <script type = "text/javascript" language = "javascript">
+
+// Initialization
+    function AdsInitialization() {
+      document.getElementById('yandex_rtb_' + fullscreenID).style.display = 'none';
+      document.getElementById('yandex_rtb_' + mobilefullscreenID).style.display = 'none';
+      document.getElementById('yandex_rtb_' + horizontalbannerID).style.display = 'none';
+      document.getElementById('yandex_rtb_' + mobilebannerID).style.display = 'none';
+      document.getElementById('yandex_rtb_' + rewardvideoID).style.display = 'none';
+
+      unityInstance.SendMessage('AdsManager', 'VerticalInitialization', 1);
+    }
+
+    function PlatformInitialization() {
+      vkBridge.send("VKWebAppGetClientVersion").then(res => {
+        if (res.app !== "undefined" && res.app === "ok") {
+          unityInstance.SendMessage('VKMechanicsController', 'OKInitialization');
+        } else {
+          unityInstance.SendMessage('VKMechanicsController', 'VKInitialization');
+        }
+      })
+    }
+
+// OK
+    function OKInitialization() {
+      var rParams = FAPI.Util.getRequestParameters();
+      FAPI.init(rParams["api_server"], rParams["apiconnection"],
+          /*
+          * Первый параметр:
+          * функция, которая будет вызвана после успешной инициализации.
+          */
+          function() {
+              currentUserId = FAPI.Util.getRequestParameters()["logged_user_id"];
+
+              let userLang = navigator.language || navigator.userLanguage;
+              unityInstance.SendMessage('PlayerManager', 'GetPlayerLanguage', userLang);
+              vkBridge.send('VKWebAppInit').then(res => {
+                if (res.result === true)
+                {
+                  vkBridge.send("VKWebAppGetUserInfo").then(res => {
+                    console.log(res);
+                    let userName = res.first_name + " " + res.last_name;
+                    let userPhoto = res.photo_200;
+                    unityInstance.SendMessage('PlayerManager', 'GetPlayerName', userName);
+                    unityInstance.SendMessage('PlayerManager', 'GetPlayerPhoto', userPhoto);
+                    unityInstance.SendMessage('PlayerManager', 'PlayerAuthorized');
+                  })
+                } else {
+                  unityInstance.SendMessage('PlayerManager', 'PlayerNotAuthorized');
+                }
+              })
+          },
+          /*
+          * Второй параметр:
+          * функция, которая будет вызвана, если инициализация не удалась.
+          */
+          function(error) {
+            unityInstance.SendMessage('PlayerManager', 'PlayerNotAuthorized');
+          }
+      );
+    }
+
+    function ShowOKInterstational() {
+      FAPI.UI.showAd()
+      .then(res => {
+        console.log(res);
+        if (res.data === "no_ads" || res.data === "call_limit") {
+          unityInstance.SendMessage('AdsManager', 'TryToLoadFullScreen');
+        }
+      })
+      .catch(err => {
+        console.log(err);
+        unityInstance.SendMessage('AdsManager', 'TryToLoadFullScreen');
+      })
+    }
+
+    function ShowOKRewardVideo() {
+      FAPI.UI.loadAd()
+      .then(res => {
+        console.log(res);
+        if (res.data === "ready") {
+          FAPI.UI.showLoadedAd().then(res => {
+            console.log(res);
+            if (res.data === "complete") {
+              unityInstance.SendMessage('AdsManager', 'GetReward');
+            } else if (res.data === "not_prepared" || res.data === "mp4_not_supported") {
+              unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
+            }
+          })
+        } else if (res.data === "empty" || res.data === "call_limit" || res.data === "disabled") {
+          unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
+        }
+      })
+      .catch(err => {
+        console.log(err);
+        unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
+      })
+    }
+
+    function OKPublish(text, link) {
+      //vkBridge.send('OKWebAppCallAPIMethod', {"method" : "mediatopic.post", "request_id" : currentUserId,
+      //"params": {"uid" : currentUserId, "type" : "USER",
+      //"attachment": {"media" : [{"title" : text, "url" : link}]}}});
+      FAPI.UI.postMediatopic({"media" : [{"title" : text, "url" : link}]});
+    }
+
+    function OKInvite(text, link) {
+      FAPI.UI.showInvite(text + '\n' + link);
+    }
+
+  //  function
+
+    // VK
+    function VKInitialization() {
+      VK.init(function() {
+      }, function() {
+        VKInitialization();
+      }, '5.131');
+      VKMobileInitialization();
+    }
+
+    function VKMobileInitialization()
+    {
+      let userLang = navigator.language || navigator.userLanguage;
+      unityInstance.SendMessage('PlayerManager', 'GetPlayerLanguage', userLang);
+      vkBridge.send('VKWebAppInit').then(res => {
+        if (res.result === true)
+        {
+          vkBridge.send("VKWebAppGetUserInfo").then(res => {
+            console.log(res);
+            let userName = res.first_name + " " + res.last_name;
+            let userPhoto = res.photo_200;
+            unityInstance.SendMessage('PlayerManager', 'GetPlayerName', userName);
+            unityInstance.SendMessage('PlayerManager', 'GetPlayerPhoto', userPhoto);
+            unityInstance.SendMessage('PlayerManager', 'PlayerAuthorized');
+          });
+          vkBridge.send("VKWebAppAddToHomeScreenInfo").then(res => {
+            console.log(res);
+            if (res.is_feature_supported === false) {
+              unityInstance.SendMessage('VKMechanicsController', 'Added');
+            } else {
+              if (res.is_added_to_home_screen === true) {
+                unityInstance.SendMessage('VKMechanicsController', 'Added');
+              }
+            }
+          })
+        } else {
+          unityInstance.SendMessage('PlayerManager', 'PlayerNotAuthorized');
+        }
+      })
+    }
+
+    function ShowVKInterstational() {
+      vkBridge.send("VKWebAppShowNativeAds", {ad_format:"interstitial"})
+      .then(data =>{
+        unityInstance.SendMessage('AdsManager', 'AdShowed');
+      })
+      .catch(error =>{
+        unityInstance.SendMessage('AdsManager', 'TryToLoadFullScreen');
+      });
+    }
+
+    function ShowVKRewardVideo() {
+      vkBridge.send("VKWebAppShowNativeAds", {ad_format:"reward"})
+      .then(data => {
+        unityInstance.SendMessage('AdsManager', 'GetReward');
+      })
+      .catch(error => {
+        unityInstance.SendMessage('AdsManager', 'TryToLoadCustomRewardVideo');
+      });
+    }
+
+    function VKInvite() {
+      try {
+        vkBridge.send("VKWebAppShowInviteBox").catch(err => {
+          VK.callMethod("showInviteBox");
+        })
+      } catch(err) {
+        VK.callMethod("showInviteBox");
+      }
+    }
+
+    function VKMobileInvite() {
+      vkBridge.send("VKWebAppShowInviteBox");
+    }
+
+    function VKPublish(text, link) {
+      vkBridge.send("VKWebAppShowWallPostBox", {
+        "message": text,
+        "attachments": link
+      }).catch(err => {
+        if (err.error_type !== "client_error") {
+          VK.api("wall.post", {"message": text, "attachments" : link, "v":"5.73"}, function (data) {
+          })
+        }
+      })
+    }
+
+    function VKMobilePublish(text, link) {
+      vkBridge.send("VKWebAppShowWallPostBox", {
+        "message": text,
+        "attachments": link
+      });
+    }
+
+    function VKAddInMenu() {
+      VK.callMethod("showSettingsBox", 256);
+    }
+
+    function VKAddToHomeScreen() {
+      vkBridge.send("VKWebAppAddToHomeScreen").then(res => {
+        if (res.is_added_to_home_screen === true) {
+          unityInstance.SendMessage('VKMechanicsController', 'Added');
+        }
+      })
+    }
+
+    function VKFavorite() {
+      vkBridge.send("VKWebAppAddToFavorites");
+    }
+
+// Full Screen
+    function ShowFullScreen() {
+      document.getElementById('yandex_rtb_' + fullscreenID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + fullscreenID,
+        blockId: fullscreenID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseFullScreen');
+        },
+        onRender: (data) => {
+          unityInstance.SendMessage('AdsManager', 'FullScreenLoaded');
+        }
+      })
+    }
+
+    function ShowMobileFullScreen() {
+      document.getElementById('yandex_rtb_' + mobilefullscreenID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + mobilefullscreenID,
+        blockId: mobilefullscreenID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseFullScreen');
+        },
+        onRender: (data) => {
+          unityInstance.SendMessage('AdsManager', 'FullScreenLoaded');
+        }
+      })
+    }
+
+    function CloseFullScreen() {
+      document.getElementById('yandex_rtb_' + fullscreenID).style.display = 'none';
+    }
+
+    function CloseMobileFullScreen() {
+      document.getElementById('yandex_rtb_' + mobilefullscreenID).style.display = 'none';
+    }
+
+// Banner
+    function ShowBanner() {
+      document.getElementById('yandex_rtb_' + horizontalbannerID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + horizontalbannerID,
+        blockId: horizontalbannerID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseBanner');
+        }
+      })
+    }
+
+    function ShowMobileBanner() {
+      document.getElementById('yandex_rtb_' + mobilebannerID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + mobilebannerID,
+        blockId: mobilebannerID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseBanner');
+        }
+      })
+    }
+
+    function CloseBanner() {
+      document.getElementById('yandex_rtb_' + horizontalbannerID).style.display = 'none';
+    }
+
+    function CloseMobileBanner() {
+      document.getElementById('yandex_rtb_' + mobilebannerID).style.display = 'none';
+    }
+
+// Custon Reward Video
+    function ShowCustomRewardVideo() {
+      document.getElementById('yandex_rtb_' + rewardvideoID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + rewardvideoID,
+        blockId: rewardvideoID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseCustomRewardVideo');
+        },
+        onRender: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CustomRewardVideoLoaded');
+        }
+      })
+    }
+
+    function CloseCustomRewardVideo() {
+      document.getElementById('yandex_rtb_' + rewardvideoID).style.display = 'none';
+    }
+
+    function ShowMobileCustomRewardVideo() {
+      document.getElementById('yandex_rtb_' + rewardvideoID).style.display = 'block';
+      Ya.Context.AdvManager.render({
+        renderTo: 'yandex_rtb_' + rewardvideoID,
+        blockId: rewardvideoID,
+        onError: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CloseMobileCustomRewardVideo');
+        },
+        onRender: (data) => {
+          unityInstance.SendMessage('AdsManager', 'CustomRewardVideoLoaded');
+        }
+      })
+    }
+
+    function CloseMobileCustomRewardVideo() {
+      document.getElementById('yandex_rtb_' + rewardvideoID).style.display = 'none';
+    }
+  </script>
   </body>
 </html>
