--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             console.log("ok");
           },
           function(error) {
+            console.log(error);
             console.log("no ok");
           }
       )
