--- a/index.html
+++ b/index.html
@@ -70,20 +70,18 @@
     }
 
     function PlatformInitialization() {
-      console.log("platform");
-      vkBridge.send('VKWebAppInit').then(res => {
-        console.log(res);
-        vkBridge.send("VKWebAppGetLaunchParams").then(res => {
-          console.log(res);
-          if (res.vk_client !== "undefined" && res.vk_client == "ok") {
-            console.log("ok");
-            unityInstance.SendMessage('VKMechanicsController', 'OKInitialization');
-          } else {
-            console.log("vk");
-            unityInstance.SendMessage('VKMechanicsController', 'VKInitialization');
-          }
-        })
-      })
+      try {
+        var rParams = FAPI.Util.getRequestParameters();
+        if (rParams.vk_client !== "undefined" && rParams.vk_client == "ok") {
+          console.log("ok");
+          unityInstance.SendMessage('VKMechanicsController', 'OKInitialization');
+        } else {
+          console.log("vk");
+          unityInstance.SendMessage('VKMechanicsController', 'VKInitialization');
+        }
+      } catch (e) {
+        unityInstance.SendMessage('VKMechanicsController', 'VKInitialization');
+      }
     }
 
 // OK
@@ -146,31 +144,32 @@
 
     function VKMobileInitialization()
     {
-      console.log("bridge");
-      vkBridge.send("VKWebAppGetLaunchParams").then(res => {
-        unityInstance.SendMessage('PlayerManager', 'GetPlayerLanguage', res.vk_language);
-        console.log(res);
-        if (res.vk_is_favorite === 1) {
-          unityInstance.SendMessage('VKMechanicsController', 'InFavorite');
-        }
-      });
-
-      vkBridge.send("VKWebAppGetUserInfo").then(res => {
-        let userName = res.first_name + " " + res.last_name;
-        let userPhoto = res.photo_200;
-        unityInstance.SendMessage('PlayerManager', 'GetPlayerName', userName);
-        unityInstance.SendMessage('PlayerManager', 'GetPlayerPhoto', userPhoto);
-        unityInstance.SendMessage('PlayerManager', 'PlayerAuthorized');
-      });
-
-      vkBridge.send("VKWebAppAddToHomeScreenInfo").then(res => {
-        if (res.is_feature_supported === false) {
-          unityInstance.SendMessage('VKMechanicsController', 'Added');
-        } else {
-          if (res.is_added_to_home_screen === true) {
-            unityInstance.SendMessage('VKMechanicsController', 'Added');
+      vkBridge.send('VKWebAppInit').then(res => {
+        vkBridge.send("VKWebAppGetLaunchParams").then(res => {
+          unityInstance.SendMessage('PlayerManager', 'GetPlayerLanguage', res.vk_language);
+          console.log(res);
+          if (res.vk_is_favorite === 1) {
+            unityInstance.SendMessage('VKMechanicsController', 'InFavorite');
           }
-        }
+        });
+
+        vkBridge.send("VKWebAppGetUserInfo").then(res => {
+          let userName = res.first_name + " " + res.last_name;
+          let userPhoto = res.photo_200;
+          unityInstance.SendMessage('PlayerManager', 'GetPlayerName', userName);
+          unityInstance.SendMessage('PlayerManager', 'GetPlayerPhoto', userPhoto);
+          unityInstance.SendMessage('PlayerManager', 'PlayerAuthorized');
+        });
+
+        vkBridge.send("VKWebAppAddToHomeScreenInfo").then(res => {
+          if (res.is_feature_supported === false) {
+            unityInstance.SendMessage('VKMechanicsController', 'Added');
+          } else {
+            if (res.is_added_to_home_screen === true) {
+              unityInstance.SendMessage('VKMechanicsController', 'Added');
+            }
+          }
+        })
       })
     }
 
