--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build85.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/Build86.json", {onProgress: UnityProgress});
     </script>
 
     <script type = "text/javascript" language = "javascript">
@@ -88,29 +88,14 @@
 // OK
   function OKInitialization() {
     vkBridge.send('VKWebAppInit').then(res => {
-      vkBridge.send("VKWebAppGetLaunchParams").then(res => {
-        unityInstance.SendMessage('PlayerManager', 'GetPlayerLanguage', res.vk_language);
-        if (res.vk_is_favorite === 1) {
-          unityInstance.SendMessage('VKMechanicsController', 'InFavorite');
-        }
-      });
-
+      var rParams = FAPI.Util.getRequestParameters();
+      unityInstance.SendMessage('PlayerManager', 'GetPlayerLanguage', rParams.vk_language);
       vkBridge.send("VKWebAppGetUserInfo").then(res => {
         let userName = res.first_name + " " + res.last_name;
         let userPhoto = res.photo_200;
         unityInstance.SendMessage('PlayerManager', 'GetPlayerName', userName);
         unityInstance.SendMessage('PlayerManager', 'GetPlayerPhoto', userPhoto);
         unityInstance.SendMessage('PlayerManager', 'PlayerAuthorized');
-      });
-
-      vkBridge.send("VKWebAppAddToHomeScreenInfo").then(res => {
-        if (res.is_feature_supported === false) {
-          unityInstance.SendMessage('VKMechanicsController', 'Added');
-        } else {
-          if (res.is_added_to_home_screen === true) {
-            unityInstance.SendMessage('VKMechanicsController', 'Added');
-          }
-        }
       })
     })
   }
