--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- VK.bridge -->
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
     <!-- OK -->
-    <script type="text/javascript" src="//api.ok.ru/js/fapi5.js" defer="defer"></script>
+    <script type="text/javascript" src="oksdk.js"></script>
 
   </head>
   <body>
@@ -139,6 +139,8 @@
     }
 
     function OKPublish(text, link) {
+      var rParams = FAPI.Util.getRequestParameters();
+      var currentUserId = rParams.vk_user_id;
       vkBridge.send('OKWebAppCallAPIMethod', {"method" : "mediatopic.post", "request_id" : currentUserId,
       "params": {"uid" : currentUserId, "type" : "USER",
       "attachment": {"media" : [{"title" : text, "url" : link}]}}});
