--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script>
     <!-- OK -->
     <script type="text/javascript" src="oksdk.js"></script>
+    <script type="text/javascript" src="//api.ok.ru/js/fapi5.js" defer="defer"></script>
 
   </head>
   <body>
